application operaions have been set up

--- a/public/autenticationPage.html
+++ b/public/autenticationPage.html
@@ -16,17 +16,15 @@
   </head>
 
   <body>
-    <header>
-      <div class="header">
-        <a href="mainPage.html" id="logo">Pro Credit</a>
-        <a href="applicationsPage.html" id="applications-link">Заявки</a>
-        <a href="autenticationPage.html" id="profile-link">Профиль</a>
-      </div>
-    </header>
     <main>
+      <div class="header">
+        <a href="/" id="logo">Pro Credit</a>
+        <a href="/applications" id="applications-link">Заявки</a>
+        <a href="/profile" id="profile-link">Профиль</a>
+      </div>
       <div class="autentication-page">
         <h1 id="autentication">Вход</h1>
-        <div class="autentication-box">
+        <div class="autentication-box box-animation">
           <form id="autentication-form" method="post">
             <input type="text" class="input" id="login" placeholder="Логин" />
             <input
@@ -52,4 +50,5 @@
       <p id="author">2023</p>
     </footer>
   </body>
+  <script type="text/javascript" src="script.js"></script>
 </html>
