--- a/public/registrationPage.html
+++ b/public/registrationPage.html
@@ -15,10 +15,9 @@
         <a href="/applications" id="applications-link">Заявки</a>
         <a href="/profile" id="profile-link">Профиль</a>
       </div>
-
       <div class="registration-page">
         <h1 id="registration">Регистрация</h1>
-        <div class="registration-box">
+        <div class="registration-box box-animation">
           <form id="registration-form" method="post" action="/registered">
             <div class="input-data">
               <div class="personal-data">
@@ -76,5 +75,5 @@
       <p id="author">2023</p>
     </footer>
   </body>
-  <script type="text/javascript" src="/public/script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </html>
