--- a/public/applicationsPage.html
+++ b/public/applicationsPage.html
@@ -1,91 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="/public/css/style.css" />
     <title>Заявки | ProCredit</title>
-</head>
+  </head>
 
-<body>
-    <header>
-        <div class="header">
-            <a href="mainPage.html" id="logo">Pro Credit</a>
-            <a href="applicationsPage.html" id="applications-link">Заявки</a>
-            <a href="autenticationPage.html" id="profile-link">Профиль</a>
-        </div>
-    </header>
-    <main class="applications-page">
+  <body>
+    <main>
+      <div class="header">
+        <a href="/" id="logo">Pro Credit</a>
+        <a href="/applications" id="applications-link">Заявки</a>
+        <a href="/profile" id="profile-link">Профиль</a>
+      </div>
+      <div class="applications-page">
         <div class="modal-add-application">
-            <div class="modal-content">
-                <div class="close-modal-button-container">
-                    <button class="close-modal-button">x</button>
-                </div>
-                <p class="sub-heading" id="add-application-heading">
-                    <b>Создание заявки</b>
-                </p>
-                <div class="creating-application">
-                    <form id="application-form" method="post">
-                        <select id="application-type" name="applicationtype">
-                <option class="application-type-option">Кредит наличными</option>
-                <option class="application-type-option">
-                  Оформление кредитной карты
-                </option>
-                <option class="application-type-option">
-                  Кредит на образование
-                </option>
-                <option class="application-type-option">Ипотека</option>
-                <option class="application-type-option">Автокредит</option>
-                <option class="application-type-option">
-                  Кредит на открытие бизнеса
-                </option>
-              </select>
-                        <input type="number" class="input" id="sum" name="sum" placeholder="Сумма" />
-                        <input type="date" class="input" id="due-date" name="dueDate" placeholder="Срок" />
-                        <input class="button-type-1" type="submit" id="create-an-application" value="Отправить" href="applicationsPage.html" />
-                    </form>
-                </div>
+          <div class="modal-content">
+            <div class="close-modal-button-container">
+              <button class="close-modal-button">x</button>
             </div>
+            <p class="sub-heading" id="add-application-heading">
+              <b>Создание заявки</b>
+            </p>
+            <div class="creating-application">
+              <form id="application-form" method="post">
+                <select id="application-type" name="applicationtype">
+                  <option class="application-type-option">
+                    Кредит наличными
+                  </option>
+                  <option class="application-type-option">
+                    Оформление кредитной карты
+                  </option>
+                  <option class="application-type-option">
+                    Кредит на образование
+                  </option>
+                  <option class="application-type-option">Ипотека</option>
+                  <option class="application-type-option">Автокредит</option>
+                  <option class="application-type-option">
+                    Кредит на открытие бизнеса
+                  </option>
+                </select>
+                <input
+                  type="number"
+                  class="input"
+                  name="sum"
+                  placeholder="Сумма" />
+                <input
+                  type="date"
+                  class="input"
+                  name="dueDate"
+                  placeholder="Срок" />
+                <input
+                  class="button-type-1"
+                  type="submit"
+                  value="Отправить"
+                  href="applicationsPage.html" />
+              </form>
+            </div>
+          </div>
         </div>
         <h1 id="applications">Заявки</h1>
-        <div id="applications-box">
-            <table class="applications-table">
-                <thead class="table-header">
-                    <tr>
-                        <th>Номер</th>
-                        <th>Тип</th>
-                        <th>Дата создания</th>
-                        <th>Статус</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="table-cell">394872934</td>
-                        <td class="table-cell">Автокредит</td>
-                        <td class="table-cell">27.10.2022</td>
-                        <td class="table-cell">На рассмотрении</td>
-                    </tr>
-                    <tr>
-                        <td class="table-cell">39487678</td>
-                        <td class="table-cell">Оформление кредитной карты</td>
-                        <td class="table-cell">07.05.2017</td>
-                        <td class="table-cell">Одобрена</td>
-                    </tr>
-                </tbody>
-            </table>
-            <button class="add-button" data-trigger>+</button>
+        <div class="applications-box box-animation">
+          <table class="applications-table">
+            <thead class="table-header">
+              <tr>
+                <th>Номер</th>
+                <th>Тип</th>
+                <th>Дата создания</th>
+                <th>Статус</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="table-cell">394872934</td>
+                <td class="table-cell">Автокредит</td>
+                <td class="table-cell">27.10.2022</td>
+                <td class="table-cell">На рассмотрении</td>
+              </tr>
+              <tr>
+                <td class="table-cell">39487678</td>
+                <td class="table-cell">Оформление кредитной карты</td>
+                <td class="table-cell">07.05.2017</td>
+                <td class="table-cell">Одобрена</td>
+              </tr>
+            </tbody>
+          </table>
+          <button class="add-button" data-trigger>+</button>
         </div>
+      </div>
     </main>
     <footer class="footer">
-        <p id="author">Disigned by @perpetuumm0bi1e</p>
-        <p id="author">2023</p>
+      <p id="author">Disigned by @perpetuumm0bi1e</p>
+      <p id="author">2023</p>
     </footer>
-</body>
-<script type="text/javascript" src="script.js"></script>
-
+  </body>
+  <script type="text/javascript" src="script.js"></script>
 </html>
